--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "ApiPdfCsv",
+    "Audience": "ApiPdfCsvClients",
+    "ExpireHours": 3
+  }
 }
